--- a/moveit/public/index.html
+++ b/moveit/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Nunito:ital,wght@0,400;0,600;1,800&family=Rajdhani:wght@600&display=swap" rel="stylesheet">
+
+    
     <title>React App</title>
   </head>
   <body>
@@ -10,4 +15,3 @@
     <div id="root"></div>
   </body>
 </html>
-.,
